# uorm

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: driver_manager.rs  error.rs  lib.rs  mapper_loader.rs  page.rs  transaction.rs
src/executor/: exec.rs  mapper.rs  mod.rs  session.rs  transaction.rs
src/tpl/: ast.rs  cache.rs  engine.rs  mod.rs  parser.rs  render.rs  render_context.rs
src/udbc/: connection.rs  deserializer.rs  driver.rs  mod.rs  serializer.rs  value.rs
src/udbc/mysql/: connection.rs  mod.rs  pool.rs  value_codec.rs
src/udbc/sqlite/: connection.rs  pool.rs  value_codec.rs
tests/: demo_mapper_macro_test.rs  demo_mapper_test.rs  demo_session_test.rs  macro_mapper_assets_test.rs  macro_mapper_sql_test.rs  mapper_macros_test.rs  mapper_test.rs  multi_db_test.rs  param_macro_test.rs  param_method_test.rs  param_vec_test.rs  scalar_usage_example.rs  session_test.rs  test_param_sql.rs
tests/resources/mapper/: macro_user.xml  multi_db.xml  test.xml  user.xml  user_multi_db.xml
uorm-macros/: Cargo.toml  README.md
uorm-macros/src/: assets.rs  lib.rs  param.rs  sql.rs  transaction.rs
