[package]
name = "uorm-macros"
version = "0.4.1"
edition = "2024"
description = "uorm 的过程宏集合：提供 mapper_assets! 编译期内嵌 XML mapper 资源，以及 sql_namespace/sql_* 属性宏，简化基于 SQL ID 的 Mapper 调用。"
license = "Apache-2.0"
repository = "https://github.com/uporm/uorm"
[lib]
proc-macro = true

[dependencies]
glob = "0.3.3"
proc-macro2 = "1.0.103"
quote = "1"
syn = { version = "2.0.111", features = ["full"] }
